--- a/index.html
+++ b/index.html
@@ -740,6 +740,15 @@
             <div class="form-section">
                 <h2 class="section-title"><i class="fas fa-route"></i> Travel Details</h2>
                 <div class="form-group">
+                    <label for="carType">Car Type:</label>
+                    <select id="carType" name="carType">
+                        <option value="">Select car type...</option>
+                        <option value="Luxury Sedan">Luxury Sedan - INR 2000</option>
+                        <option value="Sports Car">Sports Car - INR 5000</option>
+                        <option value="SUV">SUV - INR 3000</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="distance">Travel Distance (km):</label>
                     <input type="number" id="distance" name="distance" min="0" placeholder="Enter distance">
                 </div>
@@ -1202,6 +1211,11 @@
             'Fresh': 1000,
             'Artificial': 500
         };
+        const CAR_RATES = {
+            'Luxury Sedan': 2000,
+            'Sports Car': 5000,
+            'SUV': 3000
+        };
 
         function calculateEstimate() {
             const wantDecoration = document.querySelector('input[name="wantDecorationRadio"]:checked')?.value;
@@ -1210,6 +1224,8 @@
                 const decoType = document.querySelector('input[name="decorationTypeRadio"]:checked')?.value;
                 decorationCost = DECORATION_COSTS[decoType] || 0;
             }
+            const carType = document.getElementById('carType')?.value;
+            const carRate = CAR_RATES[carType] || 0;
 
             const distance = parseFloat(document.getElementById('distance')?.value) || 0;
             const distanceCost = distance * 30;
@@ -1223,7 +1239,7 @@
                 }
             }
 
-            const total = decorationCost + distanceCost + hourlyCost;
+            const total = carRate + decorationCost + distanceCost + hourlyCost;
             const estimateEl = document.getElementById('totalEstimate');
             if (estimateEl) {
                 estimateEl.textContent = total;
@@ -1233,15 +1249,9 @@
             const el = document.getElementById(id);
             if (el) el.addEventListener('input', calculateEstimate);
         });
+        const carTypeEl = document.getElementById('carType');
+        if (carTypeEl) carTypeEl.addEventListener('change', calculateEstimate);
         calculateEstimate();
     </script>
 </body>
 </html>
-
-
-    
-              <script>
-                              
-              </script>
-                        </body>
-                        </html>
