Set booking form background to black

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
             border: 1px solid rgba(255, 215, 0, 0.1);
         }
 
+        /* Ensure the form's outer area uses a black background */
+        #bookingForm {
+            background-color: #000;
+        }
+
         .section-title {
             font-size: 1.4rem;
             margin-bottom: 20px;
