Add distance package option and update pricing rules

--- a/index.html
+++ b/index.html
@@ -434,6 +434,35 @@
             border-color: #d4af37;
         }
 
+        .distance-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .distance-option {
+            flex: 1;
+            min-width: 120px;
+            text-align: center;
+            padding: 10px;
+            background: rgba(255, 215, 0, 0.1);
+            border-radius: 8px;
+            cursor: pointer;
+            border: 1px solid rgba(255, 215, 0, 0.3);
+            transition: all 0.2s ease;
+        }
+
+        .distance-option:hover {
+            background: rgba(255, 215, 0, 0.2);
+        }
+
+        .distance-option.selected {
+            background: #d4af37;
+            color: #000;
+            border-color: #d4af37;
+        }
+
         .driving-options {
             display: flex;
             flex-wrap: wrap;
@@ -767,7 +796,6 @@
                 <div class="form-group">
                     <label for="eventHours">Event Hours:</label>
                     <div class="hours-container" id="hoursContainer">
-                        <div class="hour-option" data-hours="8">8 Hours</div>
                         <div class="hour-option" data-hours="10">10 Hours</div>
                         <div class="hour-option" data-hours="12">12 Hours</div>
                         <div class="hour-option" data-hours="15">15 Hours</div>
@@ -775,6 +803,13 @@
                         <div class="hour-option" data-hours="48">2 Days</div>
                     </div>
                     <input type="hidden" id="eventHours" name="eventHours" value="">
+                </div>
+                <div class="form-group">
+                    <label for="eventDistance">Event Total Distance:</label>
+                    <div class="distance-container" id="distanceContainer">
+                        <div class="distance-option" data-distance="20">20 KM</div>
+                    </div>
+                    <input type="hidden" id="eventDistance" name="eventDistance" value="20">
                 </div>
             </div>
 
@@ -790,7 +825,7 @@
                 </div>
                 <div class="estimate-output">
                     <strong>Total Estimate: INR <span id="totalEstimate">0</span></strong>
-                    <p class="estimate-note">*Pricing may vary with fuel MRP and booking hours. Please verify the final estimate with our team via WhatsApp or call.</p>
+                    <p class="estimate-note">*Pricing includes 20 km and 10 hours. Beyond these limits, INR 100 is added for every 2 km and extra hourly charges apply. Final estimate may vary with fuel MRP. Please verify with our team via WhatsApp or call.</p>
                 </div>
             </div>
 
@@ -965,6 +1000,7 @@
             const endSubLocation = getVal('endSubLocation');
             const endDetailedAddress = getVal('endDetailedAddress');
             const eventHours = getVal('eventHours');
+            const eventDistance = getVal('eventDistance');
             const drivingOption = getVal('drivingOption');
             const customDriving = getVal('customDriving');
             const message = getVal('message');
@@ -1012,6 +1048,7 @@
                 `- Start: ${startLocationStr}`,
                 `- End: ${endLocationStr}`,
                 `- Hours: ${eventHours || 'Not specified'}`,
+                `- Distance Package: ${eventDistance || 'Not specified'}`,
                 `- Driving: ${(drivingOption === 'Other' && customDriving) ? customDriving : drivingOption || 'Not specified'}`,
                 message ? `- Special Requests: ${message}` : null
             ].filter(Boolean).join('\n');
@@ -1232,12 +1269,26 @@
                 document.querySelectorAll('.hour-option').forEach(opt => {
                     opt.classList.remove('selected');
                 });
-                
+
                 // Add selected class to clicked option
                 this.classList.add('selected');
-                
+
                 // Set hidden input value
                 document.getElementById('eventHours').value = this.dataset.hours;
+                calculateEstimate();
+            });
+        });
+
+        // Event distance selection
+        document.querySelectorAll('.distance-option').forEach(option => {
+            option.addEventListener('click', function() {
+                document.querySelectorAll('.distance-option').forEach(opt => {
+                    opt.classList.remove('selected');
+                });
+
+                this.classList.add('selected');
+                document.getElementById('eventDistance').value = this.dataset.distance;
+                calculateEstimate();
             });
         });
 
@@ -1327,13 +1378,17 @@
                 decorationCost = DECORATION_COSTS[decoType] || 0;
             }
 
+            const baseDistance = parseFloat(document.getElementById('eventDistance')?.value) || 0;
             const distance = parseFloat(document.getElementById('distance')?.value) || 0;
-            const distanceCost = distance * 100;
+            let distanceCost = 0;
+            if (distance > baseDistance) {
+                distanceCost = Math.ceil((distance - baseDistance) / 2) * 100;
+            }
 
             const duration = parseFloat(document.getElementById('duration')?.value) || 0;
             let hourlyCost = 0;
-            if (duration > 8) {
-                hourlyCost = (duration - 8) * carRate * 0.04;
+            if (duration > 10) {
+                hourlyCost = (duration - 10) * carRate * 0.04;
             }
 
             const total = carRate + decorationCost + distanceCost + hourlyCost;
