Combine light theme selected styles to avoid conflict

--- a/index.html
+++ b/index.html
@@ -106,12 +106,6 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        body.light-theme .driving-option.selected {
-            background: #d4af37;
-            color: #000000;
-            border-color: #d4af37;
-        }
-
         body.light-theme .seg-item {
             background: rgba(0, 0, 0, 0.05);
             border-color: #dddddd !important;
@@ -124,6 +118,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
+        body.light-theme .driving-option.selected,
         body.light-theme .seg-item:has(input:checked),
         body.light-theme .seg-item input:checked + span {
             background: #d4af37;
